--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ logging.level.hello.springmvc=debug
 
 #default message source
 #spring.messages.basename=messages
-spring.messages.basename=messages, config.i18n.messages
+spring.messages.basename=messages, config.i18n.messages, errors
