--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -2,3 +2,14 @@ required.item.itemName=상품 이름은 필수입니다.
 range.item.price=가격은 {0} ~ {1} 까지 허용합니다.
 max.item.quantity=수량은 최대 {0} 까지 허용합니다.
 totalPriceMin=가격 * 수량의 합은 {0}원 이상이어야 합니다. 현재 값 = {1}
+
+#컨트롤러에 파라미터 바인딩 시에 타입에러 발생시 FieldError객체 생성시에 "typeMismatch" error code를 인자로 넘겨줌
+typeMismatch.java.lang.Integer=숫자를 입력해주세요.
+typeMismatch=타입오류입니다.
+
+#Bean Validation 추가
+#엔티티나 DTO같은 객체에 붙어있는 validation annotation의 경우 어노테이션 이름을 error code로 넘겨줌
+#{0}은 필드 명, {1}~ 는 어노테이션 인자 값
+NotEmpty={0} 공백X
+Range={1} ~ {2} 허용
+Max= 최대 {1}
