--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ logging.level.hello.springmvc=debug
 #default message source
 #spring.messages.basename=messages
 spring.messages.basename=messages, config.i18n.messages, errors
+
+server.servlet.session.tracking-mode=cookie
+server.servlet.session.timeout=1800     //default 1800
