--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,5 @@ logging.level.hello.springmvc=debug
 spring.messages.basename=messages, config.i18n.messages, errors
 
 server.servlet.session.tracking-mode=cookie
-server.servlet.session.timeout=1800     //default 1800
+#default 1800
+server.servlet.session.timeout=1800
