서블릿 예외처리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.messages.basename=messages, config.i18n.messages, errors
 server.servlet.session.tracking-mode=cookie
 #default 1800
 server.servlet.session.timeout=1800
+
+#스프링 부트가 제공하는 기본 에러 페이지 사용x
+server.error.whitelabel.enabled=false
